update to jdk 25 and add startup sound and unify window title