@@ -7,6 +7,7 @@ import dev.thoq.gui.auth.AltManagerGui;
 import dev.thoq.gui.AlyaButton;
 import dev.thoq.util.ShaderUtil;
 import dev.thoq.util.font.AlyaFontRenderer;
+import dev.thoq.util.misc.Title;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.renderer.GlStateManager;
 import net.minecraft.client.renderer.OpenGlHelper;
@@ -140,6 +141,7 @@ public class GuiMainMenu extends GuiScreen implements GuiYesNoCallback {
     }
 
     public void initGui() {
+        Title.update(this.getClass());
         final DynamicTexture viewportTexture = new DynamicTexture(256, 256);
         this.backgroundTexture = this.mc.getTextureManager().getDynamicTextureLocation("background", viewportTexture);
         Calendar calendar = Calendar.getInstance();
@@ -167,7 +169,7 @@ public class GuiMainMenu extends GuiScreen implements GuiYesNoCallback {
             this.field_92024_r = this.fontRendererObj.getStringWidth(this.openGLWarning2);
             int k = Math.max(field_92023_s, this.field_92024_r);
             this.field_92022_t = (this.width - k) / 2;
-            this.field_92021_u = this.buttonList.get(0).yPosition - 24;
+            this.field_92021_u = this.buttonList.getFirst().yPosition - 24;
             this.field_92020_v = this.field_92022_t + k;
             this.field_92019_w = this.field_92021_u + 24;
         }
@@ -485,7 +487,7 @@ public class GuiMainMenu extends GuiScreen implements GuiYesNoCallback {
         if(this.openGLWarning1 != null && !this.openGLWarning1.isEmpty()) {
             drawRect(this.field_92022_t - 2, this.field_92021_u - 2, this.field_92020_v + 2, this.field_92019_w - 1, 1428160512);
             this.drawString(this.fontRendererObj, this.openGLWarning1, this.field_92022_t, this.field_92021_u, -1);
-            this.drawString(this.fontRendererObj, this.openGLWarning2, (this.width - this.field_92024_r) / 2, this.buttonList.get(0).yPosition - 12, -1);
+            this.drawString(this.fontRendererObj, this.openGLWarning2, (this.width - this.field_92024_r) / 2, this.buttonList.getFirst().yPosition - 12, -1);
         }
 
         super.drawScreen(mouseX, mouseY, partialTicks);
